--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 #sudo apt-get install libmariadb-dev
-# apt install python3-venv libapache2-mod-wsgi-py3 git redis
+# apt install python3-venv libapache2-mod-wsgi-py3 git redis  libmariadb-dev
 
 # pip install gunicorn
 # gunicorn -w 4 --bind unix:/tmp/gunicorn.sock wsgi:app
