--- a/README
+++ b/README
@@ -1,11 +1,14 @@
 
-#sudo apt-get install libmariadb-dev
-# apt install python3-venv libapache2-mod-wsgi-py3 git redis  libmariadb-dev
+Requisitos
 
+#apt install python3-venv libapache2-mod-wsgi-py3 git redis  libmariadb-dev
+
+Lanzar
 # pip install gunicorn
 # gunicorn -w 4 --bind unix:/tmp/gunicorn.sock wsgi:app
 # gunicorn -w 4 -b 0.0.0.0:5000 wsgi:app
 
+Proxy
 
 # sudo a2enmod proxy
 # sudo a2enmod proxy_http
