--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 Requisitos
 
 #apt install python3-venv libapache2-mod-wsgi-py3 git redis  libmariadb-dev
+# pip install email_validator sqlalchemy_utils flask_wtf flask_login 
 
 Lanzar
 # pip install gunicorn
